--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,13 +5,13 @@ environment:
   sdk: '>=1.8.2 <2.0.0'
 dependencies:
   browser: any
-  polymer: any
+  polymer: '>=0.15.0 <1.0.0'
   paper_elements: any
   core_elements: any
   http: any
   xml_rpc: any
   xml : any
-  web_components: '>=0.11.3 <0.13.0'
+  web_components: '>=0.11.3 <0.14.0'
   wasanbon_xmlrpc:
     git : git://github.com/sugarsweetrobotics/wasanbon_xmlrpc.dart
   rtcprofile:
@@ -29,5 +29,6 @@ transformers:
     entry_points:
     - web/index.html
 - $dart2js:
-    #$include: web/index.html_bootstrap.dart
+    #$include: 'web/index.html_bootstrap.dart'
     $include: 'web/index.html.polymer.bootstrap.dart'
+    #$include: '**/*.bootstrap.initialize.dart'
